# Telegrambot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/bot/: __main__.py  config.py  database.py  logging.py  texts.py
src/bot/filters/: is_admin.py
src/bot/handlers/: __init__.py  automod.py  commands.py  welcome.py
src/bot/middlewares/: admin_check.py  antiflood.py
src/bot/utils/: keyboards.py  moderation.py
tests/: test_automod.py  test_commands.py  test_db.py
