[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-admin-bot"
version = "0.2.0"
description = "Production-ready Telegram group admin and moderation bot"
requires-python = ">=3.11"
dependencies = [
  "aiogram==3.7.0",
  "aiosqlite==0.20.0",
  "pydantic-settings==2.3.4",
  "loguru==0.7.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
